Sun Feb 2 05:48:42 2014  Eric Wong <e@80x24.org>

	* io.c (rb_io_syswrite): add RB_GC_GUARD
	  [Bug #9472][ruby-core:60407]

Sat Feb  1 15:09:16 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_typedesc2val): add VT_RECORD case.

Sat Feb  1 06:38:51 2014  Zachary Scott  <e@zzak.io>

	* lib/drb/drb.rb: [DOC] Add note about start_service for each process
	  Based on a patch by @rosenfeld [Fixes GH-514] [ci skip]
	  https://github.com/ruby/ruby/pull/514

Sat Feb  1 06:30:20 2014  Zachary Scott  <e@zzak.io>

	* error.c: [DOC] Document Exception#cause by @jasonrclark [ci skip]
	  [Fixes GH-519] https://github.com/ruby/ruby/pull/519

Sat Feb  1 06:10:49 2014  Zachary Scott  <e@zzak.io>

	* lib/securerandom.rb: [DOC] Add note on require for examples
	  Based on a patch by @schneems [Fixes GH-518] [ci skip]
	  https://github.com/ruby/ruby/pull/518

Sat Feb  1 06:04:56 2014  Zachary Scott  <e@zzak.io>

	* numeric.c: [DOC] Fix typo in example for #step [ci skip]
	  Patch by @ksss [Fixes GH-522] https://github.com/ruby/ruby/pull/522

Fri Jan 31 17:01:47 2014  Eric Wong <e@80x24.org>

	* ext/socket/init.c (rsock_socket0): split out SOCK_CLOEXEC version
	* ext/socket/socket.c (rsock_socketpair0): ditto
	  [ruby-core:60377]

Fri Jan 31 03:48:40 2014  Eric Wong <e@80x24.org>

	* benchmark/driver: avoid large alloc in driver process
	  [ruby-core:59869] [Bug #9430]

Thu Jan 30 14:45:49 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* configure.in: use $@ instead of $(.TARGET) because .TARGET is not
	  supported by GNU make.

Thu Jan 30 08:26:21 2014  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/fiddle/closure.c: use sizeof(*pcl) for correct sizeof value.
	  [ruby-core:57599] [Bug #8978].

Wed Jan 29 20:08:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (nogvl_copy_stream_sendfile): check socket on other than
	  linux, as sendfile(2) on non-socket fd works only on linux.
	  [Feature #9427]

Wed Jan 29 18:09:48 2014  Eric Wong <e@80x24.org>
